--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ html {
 .co-text-h6 { font-size: 20px; font-weight: 600; line-height: normal}
 
 .co-text-p1 { font-size: 20px; font-weight: 400; line-height: normal}
-.co-text-p1_underline { font-size: 20px; font-weight: 600; line-height: 34px; text-decoration: underline}
+.co-text-p1-underline { font-size: 20px; font-weight: 600; line-height: 34px; text-decoration: underline}
 .co-text-p2 { font-size: 18px; font-weight: 350; line-height: normal}
 
 .co-text-mo-h1 { font-size: 36px; font-weight: 700; line-height: normal}
