--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,3 +110,29 @@ input[type="checkbox"]:checked ~ .faq-item-content {
 
     100% { transform: rotate(90deg); }
 }
+
+.box {
+    position: relative;
+    overflow: hidden;
+}
+
+.box::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    transform: scale3d(1, 0, 1);
+    transform-origin: center bottom;
+    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    z-index: -1;
+    
+}
+
+.box:hover::before {
+    transform: scale3d(1, 1, 1);
+    background-color: #262626;
+}
