faq animation working better, style not done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,49 +186,30 @@ input[type="checkbox"]:checked ~ .faq-item-content {
         transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
     }
 
-    .faq label {
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-    }
-
-    .faq input[type="checkbox"] {
-        display: none;
-    }
-
     @layer components {
         .faq-arrow {
             @apply w-[22px] md:w-[28px] h-[22px] md:h-[28px] border-t-4 border-r-4 border-co-yellow ml-2 mr-2 mt-1;
-            transition: transform 0.8s;
-            /*transition: transform 0.8s;*/
-            /*transition: transform 0.8s, -webkit-transform 0.8s;*/
-            -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-            /*-webkit-transform: rotate(45deg);*/
+            transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
             transform: rotate(45deg);
         }
     }
 
-
     .faq input[type="checkbox"]:checked + label  .faq-arrow {
-        /*transition: -webkit-transform 0.8s;*/
-        transition: transform 0.8s;
-        /*transition: transform 0.8s, -webkit-transform 0.8s;*/
-        -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        /*-webkit-transform: rotate(135deg);*/
+        transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         transform: rotate(135deg);
     }
 
-    .faq input[type="checkbox"]:checked + label {
-        display: block;
-        height: 225px;
-        transition: height 0.8s;
-        -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    .faq input[type="checkbox"]:checked ~  div {
+        transform: scaleY(1);
+        max-height: 225px;
+        transition: all .3s ease-in-out;
     }
 
-    .faq input[type='checkbox']:not(:checked) + label {
-        display: block;
-        transition: height 0.8s;
-        height: 60px;
-        -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
+    .faq input[type='checkbox']:not(:checked) ~  div {
+    transform: scaleY(0);
+        transform-origin: top;
+        max-height: 0;
+        overflow: hidden;
+        position: relative;
+        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
