--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,6 @@ body {
         @apply fill-co-white;
     }
 }
-
 .testimonial::before {
     content: "";
     z-index: -1;
@@ -188,7 +187,7 @@ body {
     transform: scaleY(0);
     transform-origin: 50% 100%;
     transition: transform 0.3s ease-out;
-    background-image: url("/assets/img/customer2.jpg");
+    background-image: var(--before-background-image, url(''));
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
