--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,19 +5,19 @@
 
 @font-face {
     font-family: Noto;
-    src: url(assets/fonts/NotoSans-Regular.ttf) format('truetype');
+    src: url(../assets/fonts/NotoSans-Regular.ttf) format('truetype');
     font-weight: 400;
 }
 
 @font-face {
     font-family: Noto;
-    src: url(assets/fonts/NotoSans-SemiBold.ttf) format('truetype');
+    src: url(../assets/fonts/NotoSans-SemiBold.ttf) format('truetype');
     font-weight: 600;
 }
 
 @font-face {
     font-family: Noto;
-    src: url(assets/fonts/NotoSans-Bold.ttf) format('truetype');
+    src: url(../assets/fonts/NotoSans-Bold.ttf) format('truetype');
     font-weight: 700;
 }
 
